Fixed left shift on model open

--- a/Personal_Projects/WeatherZap/WeatherZap/Content/Site.css
+++ b/Personal_Projects/WeatherZap/WeatherZap/Content/Site.css
@@ -42,7 +42,7 @@ body {
 
 body.modal-open, .modal-open .navbar-fixed-top, .modal-open .navbar-fixed-bottom {
     overflow: hidden !important;
-    
+    padding-right: 0 !important
 }
 /* Custome CSS
 --------------------------------------------*/
